was added/changed : - asynq and redis - routes in flask - cleaned code - main easier - login/register/refresh handlers - interface for integration to python service - foundation for queue tasks - validators for user data - other small fixes
